examples/test/testpolicy4647.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4647
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key25: value4
      key28: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value25
          key44: value2
          key45: value11
      podSelector:
        matchLabels:
          key47: value33
          key14: value17
